# linker_grasp

./: README.md
L10/Finger_Test/L/: 4finger-cebai-single-case (-255).sh  4finger-cebai.sh  4finger-wanqu (0).sh  thumb.sh
L10/Finger_Test/R/: 4finger-cebai-single-case.sh  4finger-wanqu (0).sh  4finger-wanqu (mix) (copy).sh  4finger-wanqu (mix).sh  4fingure-scope.sh
fixedgrasp/L10/Finger_Test/L/: 4finger-cebai-final.sh  4finger-cebai-single-case.sh  4finger-wanqu (mix) (copy).sh  4finger-wanqu (mix).sh  4finger-wanqu.sh  zhuaqu-baicai.sh  zhuaqu-shuiping.sh  zhuawo.sh
fixedgrasp/L10/Finger_Test/R/: 4finger-cebai-final.sh  4finger-cebai-single-case (-255).sh  4finger-cebai.sh  4finger-wanqu.sh  jingdu.sh  thumb.sh  zhuaqu-baicai.sh  zhuaqu-shuiping.sh  (+2 more)
fixedgrasp/src/HandTCPCommunication/: tools_Tcp.json
fixedgrasp/src/lefthand_10dof/: CMakeLists.txt
src/HandTCPCommunication/: CMakeLists.txt  CalibrateMatrix_EyeInHand.txt  package.xml  target_pose.json
src/HandTCPCommunication/handeyesolver/: CMakeLists.txt  configure.py  requirements.txt
src/HandTCPCommunication/handeyesolver/include/: handeyesolver.h  pathplanner.h  pipecomm.h
src/HandTCPCommunication/handeyesolver/python/: dq_wrapper.py
src/HandTCPCommunication/handeyesolver/python/dualquaternion/: dual_numbers.py  dual_quaternion_hand_eye_calibration.py
src/HandTCPCommunication/handeyesolver/python/iterative/: iterative.py
src/HandTCPCommunication/handeyesolver/python/kroneckerproduct/: kronecker_product.py
src/HandTCPCommunication/handeyesolver/src/: handeyesolver.cpp  pipecomm.cpp
src/HandTCPCommunication/include/: GeneralFunction.h  TCPCommunication_Hand.h  rm_base.h  rm_define.h
src/HandTCPCommunication/launch/: HandCtrl_node.launch
src/HandTCPCommunication/src/: CoordinateTransform.cpp  HandCtrl_node.cpp  HandEyeCalibration.cpp
src/lefthand_10dof/: package.xml
src/lefthand_10dof/meshes/: j1_2.STL  j1_3.STL  j2_0.STL  j2_1.STL  j2_2.STL  j3_1.STL  j3_2.STL  j4_1.STL  j4_2.STL  j5_2.STL
src/lefthand_10dof/urdf/: lefthand_10dof.csv
(+39 files in other folders)
